# surrealdb-rocket-starter

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/database/: mod.rs
src/models/: task.rs
src/routes/: main.rs  mod.rs  tasks.rs
templates/: index.html.tera
