[package]
name = "rocket-surreal"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.0.0"

serde_json = "1.0"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]